# CYNIC

./: .antigravityignore  .cortex-session  .cynic-explorer-2026-04-26.md  .dockerignore  .env.example  .env.governance  .env.template  .env.test.example  .env.windows  .gemini-auth-status.md  .geminiignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .handoff.md  .mcp.cynic-gpu.json  .mcp.json  .mcp.json.example  .observations.jsonl  .pre-commit-config.yaml  .replit  100  ACTION_PLAN.md  ACTIVATION_CHECKLIST.md  ACTIVATION_GUIDE.md  AGENTS.md  AGENT_GUIDANCE.md  AGENT_ORCHESTRATION_DESIGN_2026_05_01.md  AGENT_RAILS.md  ANTIGRAVITY.md  API.md  ARCHITECTURE.md  ARTIFACTS_METADATA.json  ARTIFACT_AUDIT_2026_05_03.md  AUDIT_INFRASTRUCTURE.md  AUDIT_JUDGMENT.md  AUDIT_REPORT_2026-02-20.md  AUDIT_SESSION_RECOVERY.md  AUTONOMOUS_BATTLES.md  (+292 more)
contracts/governance/: Cargo.toml
cynic/: .env.example  ARCHITECTURE_REFACTOR_PLAN.md  DEPLOYMENT_DEBT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.bootstrap  FULL_PICTURE_ANALYSIS.md  HANDLER-ARCHITECTURE-INTEGRATION.md  HANDLER-VALIDATOR-IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.txt  INFRASTRUCTURE_FIXES_COMPLETE.md  Makefile  PHASE_0_5_SUMMARY.md  PHASE_1_CONSCIOUS_STATE.md  PHASE_1_FIXES_APPLIED.md  PHASE_2_DIRECTORY_RESTRUCTURING.md  PHASE_4_COMPLETE.md  README.md  SENIOR_DEV_ANALYSIS.md  SERVICE-LAYER-REFACTOR.md  TASK_3.2_PROMETHEUS_METRICS.md  TASK_3.3_HEALTH_CHECK_COMPLETE.md  TECHNICAL_DEBT.md  TESTING.md  __init__.py  config.py  docker-compose.vm.yml  docker-compose.yml  init-db.sql  measure_probe_variance.py  orchestration.py  perceive_test.json  pyproject.toml  run_mcp_bridge.sh  run_tests.py  scheduler.py  test_auto_bench_out.txt  test_axiom_out.txt  test_endpoints_simple.py  test_full2_out.txt  (+7 more)
cynic-askesis/: Cargo.toml  README.md
cynic-askesis/src/: error.rs  lib.rs  main.rs  reflection.rs
cynic-askesis/tests/: anchor_mock.rs  audit_mock.rs  log_roundtrip.rs
cynic-kernel/: BENCHMARK_ROUTING.md  CHANGELOG.md  Cargo.toml  build.rs
cynic-kernel/domains/: SOCIAL_SOC.md  chess.md  dev.md  general.md  governance.md  phone-number.md  token-analysis.md  trading.md  twitter.md  wallet-judgment.md
cynic-kernel/src/: backend.rs  backend_llamacpp.rs  backend_openai.rs  ccm.rs  chat_port.rs  circuit_breaker.rs  config.rs  deterministic_dog.rs  dog.rs  gemini_dog.rs  hal.rs  inference_dog.rs  introspection.rs  judge.rs  lib.rs  main.rs  mcp.rs  pipeline.rs  probe.rs  pulse.rs  rest.rs  router.rs  storage.rs  storage_http.rs  storage_port.rs  supervisor.rs  temporal.rs
cynic-kernel/tests/: calibration_token.rs  chat_port_contract.rs  dog_contract.rs  integration_ccm_consumer.rs  integration_hermes_x_reader.rs  integration_judge.rs  integration_k15_falsification.rs  integration_routing_benchmark.rs  integration_rtk_reader.rs  integration_storage.rs  organ_health.rs  organ_port_contract.rs  organ_registry.rs  rest_routes.rs  storage_contract.rs
cynic-mcp/: Cargo.toml  build.rs
cynic-mcp/src/: lib.rs  local_tools.rs  main.rs  proxy.rs  types.rs
cynic-node/: Cargo.toml  config-cynic-gpu.toml  node-qwen3-embed-forge.toml  node-qwen35-gpu.toml  node-qwen36-27b-gpu.toml  node-qwen7b-hf.toml  node.toml.example
cynic-node/src/: announce.rs  config.rs  config_watch.rs  lifecycle.rs  main.rs  supervise.rs  system_probe.rs  websocket.rs
cynic-python/: CORPUS_ADDRESSES.json  HEURISTIC_VALIDATION_FINDINGS.md  KENOSIS_FINDINGS.md  MINING_REPORT_5_TARGETS.md  ORGANISM_ARTIFACT_PROTOCOL.md  README.md  SEMANTIC_AXIOM_EXTRACTION.py  WALLET_BEHAVIOR_README.md  WALLET_BEHAVIOR_STATUS.md  active_wallets_curated.json  analyze_mc_violations.py  artifact_loader.py  audit_report_may_3.py  axiom_vectors_semantic.csv  behavior_ml_train.py  behavior_simulator.py  collect_manual_corpus.py  collect_real_corpus.py  collect_real_corpus_task.py  config.py  curation_domain_classifier.py  debug_helius.py  debug_helius_tx.py  debug_helius_v0.py  domain_iterator.py  domain_verdict_builder.py  domain_verdicts_personalized.json  domain_verdicts_stub.json  emergent_clustering_tfidf.py  expanded_spectrum_107.py  extract_all_text_blocks.py  extract_axiom_vectors_from_decisions.py  extract_organ_x_tweets.py  extract_sessions_axioms.py  filter_decisions_heuristic.py  hermes_paths.py  judges_audit_expanded.py  judges_audit_may_3.py  k15_emitter.py  kenosis_analysis_results.jsonl  (+28 more)
cynic-python/agents/: talaria_bot.py  telegram_organ_bot.py
cynic-python/analysis/: chaos_baseline.py
cynic-python/artifacts/: twitter_gates_v1.0.json
cynic-python/behavioral/: ab_test_routing.py  behavioral_learning_integrator.py  chaos_to_matrix_discovery.py  domain_router.py  extract_from_hermes.py  reflection_producer.py  tag_observations_by_source.py  unified_schema.py
cynic-python/benchmarks/: README.md  analysis.py  analyze_x_recommendations.py  convergence.py  extract_x_inference_models.py  hardware_profiler.py  judge_axiom_quality.py  test_plan.md  tuner.py
cynic-python/consumers/: k15_infrastructure_consumer.py  k15_observation_consumer.py  k15_token_analysis_consumer.py
cynic-python/curation/: D1_curated.jsonl  D2_curated.jsonl  D3_curated.jsonl  D4_curated.jsonl  D5_curated.jsonl  D6_curated.jsonl  d3_sovereignty_patterns.json
cynic-python/domains/: ORGANISM_INTEGRATION.md  PHASE1_REFINEMENT_SESSION.md  PHASE1_STRUCTURE.md  __init__.py  talaria.py
cynic-python/heuristics/: DATAFLOW.md  QUICKSTART.md  README.md  buysell_divergence_analysis.json  calibrate_real.py  calibrate_v2.py  calibration_phase21.py  calibration_with_cs_windows.json  ccm_discrimination_results.json  conviction_rewind.py  conviction_tranche_results.json  cultscreener_client.py  dataset_builder.py  falsification_tokens.json  helius_token_profiler.py  measure_against_ground_truth.py  measure_conviction_only.py  measure_token_calibration.py  measure_twitter_calibration.py  real_data_loader.py  test_cultscreener_api.py  token_dataset_ingester.py  token_dataset_ingester_conviction_only.py  twitter_dog.py  twitter_signal_extractor.py  validate_twitter_scorer.py  (+2 more)
cynic-verdict-program/: Cargo.toml
(+4641 files in other folders)
