[package]
name = "cynic-askesis"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[[bin]]
name = "cynic-askesis"
path = "src/main.rs"

[lib]
name = "cynic_askesis"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
yup-oauth2 = "12"
async-trait = "0.1"
tracing = "0.1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.50.0", features = ["full", "test-util"] }

[lints]
workspace = true
