[package]
name = "cynic-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
chrono = "0.4"
prost = "0.13"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.12"
base64 = "0.22"
# surrealdb crate removed — using reqwest HTTP adapter (storage_http.rs) for SurrealDB 3.x
toml = "0.8"
walkdir = "2"
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
dirs = "6"
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
schemars = "1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
