[package]
name = "cynic-kernel"
version = "0.7.6"
edition = "2024"
publish = false

[features]
default = []

[dependencies]
chrono = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"
# surrealdb crate removed — using reqwest HTTP adapter (storage_http.rs) for SurrealDB 3.x
toml = "0.8"
walkdir = "2"
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "timeout", "trace"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
dirs = "6"
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
schemars = "1"
blake3 = "1"
bitflags = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3.27.0"
