[package]
name = "cynic-node"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "cynic-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
process-wrap = { version = "9.1", features = ["tokio1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
axum = "0.8"
tempfile = "3"

[lints]
workspace = true
