[package]
name = "cynic-node"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "cynic-node"
path = "src/main.rs"

[features]
mcp = ["dep:cynic-mcp", "dep:rmcp"]

[dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "time", "signal", "sync"] }
tokio-util = "0.7"
tokio-tungstenite = "0.24"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
http = "1.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
process-wrap = { version = "9.1", features = ["tokio1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
chrono = "0.4"
cynic-mcp = { path = "../cynic-mcp", optional = true }
rmcp = { version = "1.2", features = ["server", "transport-io"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
axum = "0.8"
tempfile = "3"

[lints]
workspace = true
