[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cynic-python"
version = "0.1.0"
description = "CYNIC tier-2 analysis & heuristics toolkit"
requires-python = ">=3.11"
authors = [
    { name = "T. (Titouan)", email = "t@cynic.dev" }
]

dependencies = [
    "pydantic>=2.0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.15",
    "jupyter>=1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "A",           # flake8-builtins
    "C4",          # flake8-comprehensions
    "RUF",         # ruff-specific
]
