[tool.poetry]
name = "cynic"
version = "0.1.0"
description = "CYNIC - Living Conscious Organism (κυνικός)"
authors = ["CYNIC Collective <cynic@asdfasdfa.dog>"]
readme = "README.md"
packages = [{include = "cynic"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"

# Database — SurrealDB (primary multi-model store)
surrealdb = "^0.3.2"

# Database — asyncpg (legacy fallback, kept for migration safety)
asyncpg = "^0.29.0"

# API Daemon
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^12.0"

# CLI
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"

# AI / LLM Adapters
anthropic = "^0.23.0"
google-generativeai = "^0.5.0"
ollama = "^0.1.8"

# Dogs Technologies
scikit-learn = "^1.4.0"       # GUARDIAN: IsolationForest
z3-solver = "^4.13.0"         # ANALYST: Formal Verification
networkx = "^3.3"              # CARTOGRAPHER: Graph algorithms
graphviz = "^0.20.0"           # CARTOGRAPHER: Visualization
tree-sitter = "^0.21.3"        # ARCHITECT: Code analysis
tree-sitter-python = "^0.21.0" # ARCHITECT: Python grammar
ruff = "^0.4.0"                # JANITOR: AST linting
scrapy = "^2.11.0"             # SCOUT: Web crawler

# Vector DB (SCHOLAR: Qdrant)
qdrant-client = {extras = ["fastembed"], version = "^1.8.0"}

# Knowledge Graph (SAGE: RDFLib)
rdflib = "^7.0.0"
sparqlwrapper = "^2.0.0"

# Learning Algorithms
numpy = "^1.26.0"
scipy = "^1.13.0"

# Async utilities
aiofiles = "^23.2.1"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-docker = "^3.1.0"
pytest-timeout = "^2.3.0"
mypy = "^1.9.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Default: skip slow integration tests (Ollama + DB required)
# Run them explicitly: pytest -m integration | pytest -m db_integration
# Canonical Windows command: PYTHONUTF8=1 python -m pytest tests/
addopts = "-m 'not integration and not db_integration'"
log_cli = false   # disable live log capture — avoids CP1252 crash on log emoji
markers = [
    "integration: requires real Ollama (gemma2:2b) at localhost:11434",
    "db_integration: requires real PostgreSQL (cynic_py Docker or CYNIC_DATABASE_URL)",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
