[tool.poetry]
name = "cynic"
version = "0.1.0"
description = "CYNIC - Living Conscious Organism (κυνικός)"
authors = ["CYNIC Collective <cynic@asdfasdfa.dog>"]
readme = "README.md"
packages = [{include = "cynic"}]

[tool.poetry.dependencies]
python = "^3.13"

# Core
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"

# Database — SurrealDB (primary multi-model store)
surrealdb = "^0.3.2"

# Database — asyncpg (3.13 wheels available from 0.30.0)
asyncpg = "^0.30.0"

# API Daemon
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^12.0"

# CLI
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"

# AI / LLM Adapters
anthropic = "^0.23.0"
google-generativeai = "^0.8.0"
ollama = "^0.1.8"
llama-cpp-python = {version = "^0.3.0", optional = true}

# Dogs Technologies
scikit-learn = "^1.5.0"       # GUARDIAN: IsolationForest (3.13 wheels from 1.5)
z3-solver = "^4.13.0"         # ANALYST: Formal Verification
networkx = "^3.3"              # CARTOGRAPHER: Graph algorithms
graphviz = "^0.20.0"           # CARTOGRAPHER: Visualization
ruff = "^0.4.0"                # JANITOR: AST linting

# Learning Algorithms (numpy 2.0: 3.13 wheels + removed deprecated aliases)
numpy = "^2.0.0"

# TUI
textual = "^0.80.0"

# Async utilities
aiofiles = "^23.2.1"
aiohttp = "^3.9.0"

[tool.poetry.extras]
local-inference = ["llama-cpp-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-docker = "^3.1.0"
pytest-timeout = "^2.3.0"
mypy = "^1.9.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Default: skip slow integration tests (Ollama + DB required)
# Run them explicitly: pytest -m integration | pytest -m db_integration
# Canonical Windows command: PYTHONUTF8=1 python -m pytest tests/
addopts = "-m 'not integration and not db_integration'"
log_cli = false   # disable live log capture — avoids CP1252 crash on log emoji
markers = [
    "integration: requires real Ollama (gemma2:2b) at localhost:11434",
    "db_integration: requires real PostgreSQL (cynic_py Docker or CYNIC_DATABASE_URL)",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
