[package]
name = "governance_contract"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
near-sdk = "5.0"
near-contract-standards = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
